# terracraft

./: Makefile  README.md  TerraCraft.h  TerraCraft.java  gen_token.ps1  gen_token.sh  terracraft.sln
TerraCraft/: .build.rs  .gitignore  Cargo.toml  build.rs
TerraCraft/src/: jvm.rs  lib.rs  net.rs
TerraCraftJVM/: build.gradle.kts  settings.gradle.kts
TerraCraftJVM/app/: build.gradle.kts
TerraCraftJVM/app/src/main/java/terracraft/: App.java  Colors.java
TerraCraftJVM/src/main/java/terracraft/: TerraCraft.java
TerraCraftJVM/src/main/jniLibs/: terracraft_TerraCraft.h
TerraCraftJVM/terracraft/: build.gradle.kts
TerraCraftJVM/terracraft/src/main/java/terracraft/: TerraCraft.java
TerraCraftNET/: FFI.cs  Program.cs  TerraCraft.cs  TerraCraftNET.csproj  TerraCraftNET.sln
TerraCraftNET/Shared/: FFI.cs
minecraft/TerraCraft/: .gitignore  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
minecraft/TerraCraft/gradle/wrapper/: gradle-wrapper.properties
minecraft/TerraCraft/src/main/java/org/terracraft/: Main.java
minecraft/TerraCraft/src/main/java/org/terracraft/terracraft/: ChatListener.java  ChatService.java  Encryption.java  TerraCraft.java
minecraft/TerraCraft/src/main/proto/: chat.proto
minecraft/TerraCraft/src/main/resources/: config.yml  plugin.yml
terraria/TerraCraft/: .gitignore  TerraCraft.sln  build.ps1  build.sh
terraria/TerraCraft/TerraCraft/: Chat.cs  Encryption.cs  TerraCraft.cs  TerraCraft.csproj  chat.proto
